# TennisApp

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  readMe.md  requirements.txt  sync.py
.github/ISSUE_TEMPLATE/: call-the-exterminator.md  feature-request.md
.github/docs/: CONTRIBUTE.md  SECURITY.md
.github/draft/: pipeline.yml
.github/workflows/: data_pipeline.yml  matches.yml  test.yml
.streamlit/: backend.py  config.toml
.streamlit/app/: app.py  main.py
.streamlit/modules/: rank.py
.streamlit/utils/: pipelines.py
app/: Home.py  app.py
app/pages/: ATP_tour.py  Slam_ML.py
app/utils/: ChartFunctions.py  Processor_SlamML.py  Processor_tour.py  images.py  plotting.py  preprocessor.py
data/: GS_predict.csv  dropshot.csv  event_points.csv
data/events/: atp-australianopen-2011.parquet  atp-australianopen-2012.parquet  atp-australianopen-2013.parquet  atp-australianopen-2014.parquet  atp-australianopen-2015.parquet  atp-australianopen-2016.parquet  atp-australianopen-2017.parquet  atp-australianopen-2018.parquet  atp-australianopen-2019.parquet  atp-australianopen-2020.parquet  atp-australianopen-2021.parquet  atp-frenchopen-2011.parquet  atp-frenchopen-2012.parquet  atp-frenchopen-2013.parquet  atp-frenchopen-2014.parquet  atp-frenchopen-2015.parquet  atp-frenchopen-2016.parquet  atp-usopen-2011.parquet  (+31 more)
docs/: README.md
models/: README.md  dropshot.h5  dropshot.keras
pipelines/: DataPipeline.py
src/: events.py  main.py  matches.py  model.py
tests/: test_setup.py
utils/: format.py  images.py  plotting.py  preprocessor.py
(+16 files in other folders)
