[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dropshot"
version = "0.5.1"
authors = [
    { name = "Danny" },
]
description = "Tennis match prediction models"
license = { file = "License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.12"

dependencies = [
    "polars>=1.20",
    "scikit-learn>=1.6",
    "tensorflow>=2.18",
]

[project.optional-dependencies]
dev = [
    "build",
]
tests = [
    "pytest",
]
